--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "reactstrap": "^9.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
